Fix overflow when step description is too long
Part of story #11492: have several steps in my tests

Have a step in text format with very long description.
Have also a step in html format.

Go to step definition artifact: the step description should not overlap its
container.
Go to TTM: the step description should not overlap its container.

--- a/www/themes/BurningParrot/css/includes/_steps.scss
+++ b/www/themes/BurningParrot/css/includes/_steps.scss
@@ -56,11 +56,11 @@
 }
 
 .steps-step-description-text {
-    white-space: pre;
+    white-space: pre-line;
 }
 
 .steps-step-action {
-    margin: 0 $tlp-spacing 0 0;
+    margin: 0 $tlp-spacing;
 }
 
 .steps-step-action-pass {
